@startuml

title __METODS's Class Diagram__\n

  namespace sample {
    namespace Metods {
      interface sample.Metods.Block {
          {abstract} + draw()
      }
    }
  }
  

  namespace sample {
    namespace Metods {
      abstract class sample.Metods.Decoration {
          + Decoration()
          + draw()
      }
    }
  }
  

  namespace sample {
    namespace Metods {
      class sample.Metods.HorizLines {
          + Square : Rectangle
          + Square1 : Rectangle
          + HorizLines()
          + draw()
          - drawTape()
      }
    }
  }
  

  namespace sample {
    namespace Metods {
      class sample.Metods.Square {
          + Square : Rectangle
          + Square1 : Rectangle
          + Square()
          + draw()
          - drawTape()
      }
    }
  }
  

  namespace sample {
    namespace Metods {
      class sample.Metods.Text {
          + Square : Rectangle
          + label1 : Label
          + Text()
          + draw()
          - drawTape()
      }
    }
  }
  

  namespace sample {
    namespace Metods {
      class sample.Metods.Text1 {
          + Square : Rectangle
          + label2 : Label
          + Text1()
          + draw()
          - drawTape()
      }
    }
  }
  

  namespace sample {
    namespace Metods {
      class sample.Metods.Text2 {
          + Square : Rectangle
          + label3 : Label
          + Text2()
          + draw()
          - drawTape()
      }
    }
  }
  

  namespace sample {
    namespace Metods {
      class sample.Metods.VertLines {
          + Square : Rectangle
          + Square1 : Rectangle
          + VertLines()
          + draw()
          - drawTape()
      }
    }
  }
  

  sample.Metods.Decoration .up.|> sample.Metods.Block
  sample.Metods.Decoration o-- sample.Metods.Block : block
  sample.Metods.HorizLines -up-|> sample.Metods.Decoration
  sample.Metods.Square -up-|> sample.Metods.Decoration
  sample.Metods.Text -up-|> sample.Metods.Decoration
  sample.Metods.Text1 -up-|> sample.Metods.Decoration
  sample.Metods.Text2 -up-|> sample.Metods.Decoration
  sample.Metods.VertLines -up-|> sample.Metods.Decoration


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
